[package]
name = "vu"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
fast_image_resize = "5.2.1"
image = "0.25.6"
pico-args = "0.5.0"
pixels = "0.14.0"
winit = { version = "0.29", features = ["wayland", "rwh_05"], default-features = false }

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
