[package]
name = "vu"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
fast_image_resize = "5.5.0"
image = "0.25.9"
pico-args = "0.5.0"
pixels = "0.14.0"
winit = { version = "0.29", features = ["wayland", "rwh_05"], default-features = false }

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
