[package]
name = "vu"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "A simple image viewer"
keywords = ["image-viewer", "wayland"]
homepage = "https://github.com/frnsys/vu"
repository = "https://github.com/frnsys/vu"

[dependencies]
anyhow = "1.0.100"
bpaf = { version = "0.9.25", features = ["derive"] }
fast_image_resize = "5.5.0"
fontdue = "0.9.3"
image = "0.25.9"
pixels = "0.14.0"
winit = { version = "0.29", features = ["wayland", "rwh_05"], default-features = false }

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
